Update to local config
