# app/router/route.go
@@ -2,7 +2,6 @@ package router
 
 import (
 	"gin-framework/app/controllers"
-	"gin-framework/app/utils"
 	ws "gin-framework/app/websocket"
 	_ "gin-framework/docs"
 
@@ -16,15 +15,24 @@ import (
 func SetupRouter() *gin.Engine {
 	r := gin.Default()
 
-	configCORS := cors.DefaultConfig()
-	configCORS.AllowOrigins = []string{"http://localhost:" + utils.GetConfig("PORT")}
-	configCORS.AllowOrigins = []string{"PUT", "GET", "POST", "DELETE"}
+	// configCORS := cors.DefaultConfig()
+	// configCORS.AllowOrigins = []string{"http://localhost:8000"}
+	// configCORS.AllowOrigins = []string{"http://localhost:" + utils.GetConfig("PORT")}
+	// configCORS.AllowOrigins = []string{"PUT", "GET", "POST", "DELETE"}
+	r.Use(cors.Default())
 
-	r.POST("/students", controllers.CreateStudent)
-	r.GET("/students", controllers.ReadAllStudents)
-	r.GET("/students/:id", controllers.GetStudentByID)
-	r.PUT("/students/:id", controllers.UpdateStudentByID)
-	r.DELETE("/students/:id", controllers.DeleteStudentByID)
+	studentsGroup := r.Group("/students")
+	studentsGroup.POST("", controllers.CreateStudent)
+	studentsGroup.GET("", controllers.ReadAllStudents)
+	studentsGroup.GET("/:id", controllers.GetStudentByID)
+	studentsGroup.PUT("/:id", controllers.UpdateStudentByID)
+	studentsGroup.DELETE("/:id", controllers.DeleteStudentByID)
+
+	// r.POST("/students", controllers.CreateStudent)
+	// r.GET("/students", controllers.ReadAllStudents)
+	// r.GET("/students/:id", controllers.GetStudentByID)
+	// r.PUT("/students/:id", controllers.UpdateStudentByID)
+	// r.DELETE("/students/:id", controllers.DeleteStudentByID)
 
 	//Swagger
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
